tests/diagnostics/catalog/snapshots/ir/IR0017.snap
error[IR0017]: IR_E_EXPECTED_EXPRESSION
 --> tests/diagnostics/catalog/sources/ir/IR0017.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0017
  = help: keep IR validation diagnostics structured and catalog-backed
